fix: back-top z-index

--- a/source/scss/views/layout/_back-top.scss
+++ b/source/scss/views/layout/_back-top.scss
@@ -17,6 +17,7 @@ $back-top-size: 50px !default;
     border-radius: 50%;
     cursor: pointer;
     opacity: 1;
+    z-index: 100;
 
     &:hover {
         background-position: right center;
